--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Sagar Page
+title: Sagar Page new
+date: 1993-10-06
 author: Dhruvsoft User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
